# European-Energy-Grid-Predictor-End-to-End-ML-Data-Pipeline

./: README.md
airflow_infrastructure/: docker-compose.yml  dockerfile
airflow_infrastructure/dags/: energy_dag.py
airflow_infrastructure/dags/utils/: task_factory.py
energy_app/: .gitignore  .user.yml  Dockerfile  Untitled.ipynb  docker-compose.yml  pyproject.toml
energy_app/config/: settings.json
energy_app/config/market_data/: market_data_configuration.json
energy_app/dbt_energy/: packages.yml
energy_app/dbt_energy/macros/: generate_lead_column.sql  train_wind_onshore_model.sql
energy_app/dbt_energy/models/marts/: mart_daily_exec_kpis.sql  mart_intraday_generation_profile.sql  mart_wind_combined_prediction.sql
energy_app/dbt_energy/models/staging/: stg_time_spine.sql
energy_app/dbt_energy/models/staging/energy/: stg_market__wholesale_prices_15min.sql
energy_app/dbt_energy/models/staging/weather/: stg_weather.yml
energy_app/src/: config.py
energy_app/src/pipeline/: pyproject.toml
energy_app/src/pipeline/energy/: config.py  transform.py
energy_app/src/pipeline/weather/: pipeline.py  test.py  transform.py
energy_app/src/utils/: archive_http_utils.py  data_helper.py  gcp_utils.py  http_utils.py
final_project/: profiles.yml
final_project/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
final_project/dbt_energy/: dbt_project.yml
final_project/dbt_energy/macros/: interpolate_15m.sql  train_solar_model.sql  train_wind_model.sql  train_wind_offshore_model.sql
final_project/dbt_energy/models/: sources.yml
(+33 files in other folders)
