[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-bigquery>=1.11.1",
    "fastparquet>=2025.12.0",
    "google-cloud-bigquery",
    "google-cloud-storage",
    "jupyter>=1.1.1",
    "numpy>=2.4.2",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "python-dotenv>=1.2.1",
    "requests-cache>=1.3.0",
    "retry-requests>=2.0.0",
]
